--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
    <body>
        <h1>Intro to JS</h1>
-       <script src = "DayThree/level2/q8.js"></script>
+       <script src = "DayFour/level3/q1.js"></script>
    </body>
 </html>
